--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <h1>Your Name</h1>
+            <h1>My Name</h1>
         </div>
         <nav>
             <ul>
