--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Main Content -->
     <main>
         <section id="home" class="section-home">
-            <h2>Welcome to My Website</h2>
+            <h2>Henlo to My Website</h2>
             <p>This is a modern, responsive website showcasing a personal brand or portfolio.</p>
         </section>
 
